<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/snackbar1"
    tools:context="com.twins.bringme.ProductDetails">

    <TextView
        android:id="@+id/barcode_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barcode_result"
        android:elevation="10dp"
        android:minLines="2"
        android:layout_marginTop="20dp"
        style="@style/Widget.AppCompat.TextView.SpinnerItem" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="10dp"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">



        <EditText
            android:id="@+id/add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/title"
            android:layout_marginTop="20dp"
            style="@style/Widget.AppCompat.EditText" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/quantity"
            android:layout_marginTop="20dp"
            style="@style/Widget.AppCompat.EditText" />

    </android.support.design.widget.TextInputLayout>

    <Switch
        android:id="@+id/sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginTop="40dp"
        android:text="@string/sale"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:gravity="center"
        android:textSize="16sp"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
        android:id="@+id/searched_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:elevation="10dp"
        android:minLines="4"
        android:layout_marginTop="20dp"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:isScrollContainer="true"
/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/search"
        android:text="@string/search_location"
        android:onClick="findPlace"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/submit"
        android:text="@string/submit"
        android:layout_gravity="center_vertical|center_horizontal"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp" />





</LinearLayout>
    </ScrollView>