<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/snackbar">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_title"
            android:elevation="10dp"
            android:layout_marginTop="20dp"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            />
    </android.support.design.widget.TextInputLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/approx_quantity"
            android:elevation="10dp"
            android:layout_marginTop="20dp"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
             />
    </android.support.design.widget.TextInputLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="10dp"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/onsale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onsale"
            android:elevation="10dp"
            android:layout_marginTop="20dp"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
             />
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:elevation="10dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            />

    </android.support.design.widget.TextInputLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:elevation="10dp"
            android:layout_marginTop="20dp"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:elevation="10dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:textStyle="normal|bold"
            android:textColor="#0000ff"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            />

    </android.support.design.widget.TextInputLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="10dp"/>

    <RatingBar

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/ratingtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ratingtext"
        android:elevation="10dp"
        android:clickable="true"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submit_rating"
        android:text="@string/submit"
        android:onClick="mainmenu"
        android:layout_gravity="center_vertical|center_horizontal"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_height="wrap_content"
        android:layout_width="90dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp" />
</LinearLayout>
    </ScrollView>